<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              tools:context=".modul.activity.RegistActivity">

    <include layout="@layout/layout_title"/>

    <com.jilian.powerstation.views.ClearEditText
        android:id="@+id/et_user_name"
        style="@style/RegistDefult"
        android:layout_marginTop="@dimen/widget_size_36"
        android:hint="@string/regist_username"/>

    <com.jilian.powerstation.views.ClearEditText
        android:id="@+id/et_email"
        style="@style/RegistDefult"
        android:hint="@string/string_email"/>

    <LinearLayout style="@style/RegistDefult">

        <com.jilian.powerstation.views.ClearEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="@dimen/widget_size_43"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/string_verification_code"
            android:maxLength="10"/>

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/string_get_code"
            android:textColor="@color/color_blue_dark"/>

    </LinearLayout>

    <com.jilian.powerstation.views.ClearEditText
        android:id="@+id/et_pwd"
        style="@style/RegistDefult"
        android:hint="@string/regist_enter_pwd"/>

    <com.jilian.powerstation.views.ClearEditText
        android:id="@+id/et_pwd_ok"
        style="@style/RegistDefult"
        android:hint="@string/regist_confirm_pwd"/>

    <TextView
        android:id="@+id/tv_ok"
        style="@style/ButtonDefult"
        android:layout_marginTop="@dimen/widget_size_30"
        android:background="@drawable/shape_btn_login_dark"
        android:enabled="false"
        android:text="@string/regist"/>

</LinearLayout>