<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
    >

    <include layout="@layout/layout_title"/>

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.jilian.powerstation.views.ClearEditText
            style="@style/EtitTextMargin"
            android:id="@+id/et_email"
            android:hint="@string/string_email"/>

        <LinearLayout style="@style/RegistDefult">

            <com.jilian.powerstation.views.ClearEditText
                android:inputType="number"
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/widget_size_43"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/string_verification_code"/>

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/string_get_code"
                android:textColor="@color/color_blue_dark"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_ok"
            style="@style/ButtonDefult"
            android:layout_marginTop="@dimen/widget_size_30"
            android:enabled="false"
            android:background="@drawable/shape_btn_login_dark"
            android:text="@string/string_next"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.jilian.powerstation.views.ClearEditText
            android:id="@+id/et_pwd"
            style="@style/EtitTextMargin"

            android:hint="@string/forget_password_enter"/>

        <com.jilian.powerstation.views.ClearEditText
            android:id="@+id/et_pwd_ok"
            style="@style/EtitTextMargin"
            android:hint="@string/forget_password_confirm"/>

        <TextView
            android:id="@+id/tv_submit"
            style="@style/ButtonDefult"
            android:layout_marginTop="@dimen/widget_size_30"
            android:enabled="false"
            android:background="@drawable/shape_btn_login_dark"
            android:text="@string/forget_password_reset"/>
    </LinearLayout>
</LinearLayout>